--- a/toursanak/toursanak/templates/partials/header.html
+++ b/toursanak/toursanak/templates/partials/header.html
@@ -19,9 +19,9 @@
             <link href="/static/css/slide/main.structure.css" rel="stylesheet" media="screen">
             <link href="/static/css/slide/provisional.css" rel="stylesheet" media="screen">
             <link href="/static/css/style_single.css" rel="stylesheet" media="screen">
-            <link href="/static/css/slide/directory-faffcf1af2ef76759b8a2a79e899c912.css" rel="stylesheet" media="screen">
+            <!-- <link href="/static/css/slide/directory-faffcf1af2ef76759b8a2a79e899c912.css" rel="stylesheet" media="screen">
             
-            <script src="/static/js/slide/directory-5f698afe814561d0a19d7710d33ba3b4.js"></script>
+            <script src="/static/js/slide/directory-5f698afe814561d0a19d7710d33ba3b4.js"></script> -->
             
             <script type="text/javascript" src="/static/js/slide/NOSlideShow.js"></script>
             <script src="/static/js/script.js"></script>
