--- a/toursanak/toursanak/templates/index.html
+++ b/toursanak/toursanak/templates/index.html
@@ -1,19 +1,26 @@
 {% include "partials/header.html" %}
 <div class="container">
     <div class="row">
-    <div class="col-sm-12 col-xs-12" style="padding-top: 25px;padding-right: 1%;">
+   <!--  <div class="col-sm-12 col-xs-12" style="padding-top: 25px;padding-right: 1%;">
             <div class="col-ms-2 col-xs-12  "></div>
             <div class="col-ms-8 col-xs-12 row1 panel panel-default" style="padding: 0px;">
                 <div class="row1 " style="min-height: 70px;">
                     <center>
                         <label style="padding-top: 15px;font-weight: bold">While not always necessary, sometimes you need to put your DOM</label>
-                        <!--<button class="btn btn-danger " style="padding-top: 5px;">Join</button>-->
+                       
                     </center>
                 </div>
             </div>
             <div class="col-ms-2 col-xs-12"></div>
+    </div> -->
     </div>
+    <div class="row">
+    <div class="col-sm-12 mytitle">
+            <center>
+                <label style="padding-top: 15px;font-weight: bold">11While not always necessary, sometimes you need to put your DOM</label>                 
+            </center>
     </div>
+</div>
 </div>
 <!--end of panel -->
 <!--start box image-->
@@ -25,10 +32,10 @@
                     <center>
                         {% if tour.feature_image == none %}
                            <img alt="" class="img-responsive  mybox1"
-                             src="/static/images/notfound.png" style="height:200px;">
+                             src="/static/images/notfound.png" style="height:200px;width: 100%;">
                         {% else %}
                             <img alt="" class="img-responsive  mybox1"
-                             src="/{{tour.feature_image}}" style="height:200px;">
+                             src="/{{tour.feature_image}}" style="height:200px;width: 100%;">
                          {%endif%}   
                     </center>
                     <div class="caption">
