--- a/toursanak/toursanak/templates/single.html
+++ b/toursanak/toursanak/templates/single.html
@@ -153,9 +153,9 @@
                                 for(var i=0;i<images.length;i++){
                                     //alert(images[i]);
                                     if(i==0)
-                                        document.getElementById("slide_image").innerHTML+='<div class="item active slide_img"><img class="img-responsive " style="width: 100%;border-radius: 3px;padding-top: 0%;" src="/'+images[i]+'" alt="Chania"></div>';
+                                        document.getElementById("slide_image").innerHTML+='<div class="item active slide_img"><img class="img-responsive " style="width: 100%;height:100%;border-radius: 3px;padding-top: 0%;" src="/'+images[i]+'" alt="Chania"></div>';
                                     else
-                                        document.getElementById("slide_image").innerHTML+='<div class="item slide_img"><img class="img-responsive " style="width: 100%;border-radius: 3px;padding-top: 0%;" src="/'+images[i]+'" alt="Chania"></div>';
+                                        document.getElementById("slide_image").innerHTML+='<div class="item slide_img"><img class="img-responsive " style="width: 100%;border-radius: 3px;height:100%;padding-top: 0%;" src="/'+images[i]+'" alt="Chania"></div>';
                                 }
                         </script>
                 </div>
